tests/testcases/valid/control_flow/03_switch.ciel
// Switch-case statements

int main() {
    int x = 5;
    int result = 0;

    // Basic switch
    switch (x) {
        case 1: {
            result = 10;
            break;
        }
        case 2: {
            result = 20;
            break;
        }
        case 5: {
            result = 50;
            break;
        }
        default: {
            result = 0;
            break;
        }
    }

    // Switch with multiple cases
    char c = 'a';
    switch (c) {
        case 'a': {
            result = 1;
            break;
        }
        case 'b': {
            result = 2;
            break;
        }
        case 'c': {
            result = 3;
            break;
        }
    }

    return 0;
}
