tests/testcases/invalid/semantic/33_missing_return_case_without_return.ciel
// Error: control may reach end of non-void function (case without return)
int classify(int x) {
    switch (x) {
        case 1:
            break;  // Error: no return here!
        case 2:
            return 200;
        default:
            return 0;
    }
}

int main() {
    int result = classify(1);
    return 0;
}
